--- a/home.html
+++ b/home.html
@@ -17,8 +17,7 @@
       <h3>Book your seat before they are all gone!</h3>
       <hr>
       <a href="/view.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-cutlery"></span> View Tables</button></a>
-      <a href="/make.html"><button class="btn btn-danger btn-lg"><span class="
-        glyphicon glyphicon-phone-alt"></span> Make Reservations</button></a>
+      <a href="/make.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-phone-alt"></span> Make Reservations</button></a>
     </div>
     <div class="row">
         <a href="#">API Table Link</a>
