--- a/reserve.html
+++ b/reserve.html
@@ -27,17 +27,17 @@
             </div>
             <div class="form-group">
                 <label for="phone">Phone Number</label>
-                <input type="text" class="form-control" id="name">
+                <input type="text" class="form-control" id="phone">
             </div>
             <div class="form-check">
                 <label for="email">Email</label>
-                <input type="email" class="form-control" id="name">
+                <input type="email" class="form-control" id="email">
             </div>
             <div class="form-check">
                 <label for="uniqueId">Unique ID</label>
-                <input type="text" class="form-control" id="name">
+                <input type="text" class="form-control" id="uniqueId">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button id="add_reservation" type="submit" class="btn btn-primary">Submit</button>
           </form>
     </div>
     <div class="row">
@@ -48,21 +48,21 @@
 
   <script type="text/javascript">
     // Question: What does this code do?
-    $("#add-btn").on("click", function(event) {
+    $("#add_reservation").on("click", function(event) {
       event.preventDefault();
 
-      var newCharacter = {
+      var newReservation = {
         name: $("#name").val().trim(),
-        role: $("#role").val().trim(),
-        age: $("#age").val().trim(),
-        forcePoints: $("#force-points").val().trim()
+        phone: $("#phone").val().trim(),
+        email: $("#email").val().trim(),
+        uniqueId: $("#uniqueId").val().trim()
       };
 
       // Question: What does this code do??
-      $.post("/api/characters", newCharacter)
+      $.post("/api/tables", newReservation)
         .then(function(data) {
           console.log(data);
-          alert("Adding character...");
+          alert("Adding reservation...");
         });
 
     });
