--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
       <h1 class="page-header"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
       <h3>Book your seat before they are all gone!</h3>
       <hr>
-      <a href="/tables.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-cutlery"></span> View Tables</button></a>
-      <a href="/reserve.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-phone-alt"></span> Make Reservations</button></a>
+      <a href="./tables.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-cutlery"></span> View Tables</button></a>
+      <a href="./reserve.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-phone-alt"></span> Make Reservations</button></a>
     </div>
     <div class="row">
         <a href="#">API Table Link</a>
