--- a/reserve.html
+++ b/reserve.html
@@ -41,8 +41,8 @@
           </form>
     </div>
     <div class="row">
-        <a href="#">API Table Link</a>
-        <a href="#">API Wait List</a>
+        <a href="./api/tables">API Table Link</a>
+        <a href="./api/waitlist">API Wait List</a>
     </div>
   </div>
 
