first test of tables api from reserve.html working

--- a/reserve.html
+++ b/reserve.html
@@ -20,7 +20,7 @@
       <a href="./home.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-home"></span> </button></a>
     </div>
     <div class="row">
-        <form>
+        <form action="/api/tables" method="post">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" class="form-control" id="name">
@@ -41,8 +41,8 @@
           </form>
     </div>
     <div class="row">
-        <a href="./api/tables">API Table Link</a>
-        <a href="./api/waitlist">API Wait List</a>
+        <a href="/api/tables">API Table Link</a>
+        <a href="/api/waitlist">API Wait List</a>
     </div>
   </div>
 
