fixing more links

--- a/home.html
+++ b/home.html
@@ -20,9 +20,9 @@
       <a href="/reserve"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-phone-alt"></span> Make Reservations</button></a>
     </div>
     <div class="row">
-        <a href="#">API Table Link</a>
-        <a href="#">API Wait List</a>
-    </div>
+      <a href="/api/tables">API Table Link</a>
+      <a href="/api/waitlist">API Wait List</a>
+  </div>
   </div>
 
   <script type="text/javascript">
