--- a/tables.html
+++ b/tables.html
@@ -16,8 +16,8 @@
       <h1 class="page-header"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
       <h3>Book your seat before they are all gone!</h3>
       <hr>
-      <a href="./reserve.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-cutlery"></span> Reservations</button></a>
-      <a href="./home.html"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-home"></span> </button></a>
+      <a href="/reserve"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-cutlery"></span> Reservations</button></a>
+      <a href="/home"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-home"></span> </button></a>
     </div>
     <div class="row">
         <div class="panel panel-default">
