--- a/reserve.html
+++ b/reserve.html
@@ -17,7 +17,7 @@
       <h3>Book your seat before they are all gone!</h3>
       <hr>
       <a href="/tables"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-cutlery"></span> View Tables</button></a>
-      <a href="/home"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-home"></span> </button></a>
+      <a href="/"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-home"></span> </button></a>
     </div>
     <div class="row">
         <form action="/api/tables" method="post">
