--- a/tables.html
+++ b/tables.html
@@ -17,7 +17,7 @@
       <h3>Book your seat before they are all gone!</h3>
       <hr>
       <a href="/reserve"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-cutlery"></span> Reservations</button></a>
-      <a href="/home"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-home"></span> </button></a>
+      <a href="/"><button class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-home"></span> </button></a>
     </div>
     <div class="row">
         <div class="panel panel-default">
@@ -35,9 +35,9 @@
         <div class="panel-body" id="waitlistSection">
         </div>
       </div>
-    <div class="row">
-        <a href="#">API Table Link</a>
-        <a href="#">API Wait List</a>
+      <div class="row">
+        <a href="/api/tables">API Table Link</a>
+        <a href="/api/waitlist">API Wait List</a>
     </div>
   </div>
 
